--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -174,6 +174,7 @@ function getAvailableVoice(lang) {
     return voices.find(voice => voice.lang === lang) || voices[0];
 }
 
+// Declare 'isSpeaking' globalmente (apenas uma vez)
 let isSpeaking = false; // Controle de estado de fala
 
 function speak(text, rate = 0.8, lang = "en-US") {
@@ -221,10 +222,7 @@ function speak(text, rate = 0.8, lang = "en-US") {
     synth.speak(utterance);
 }
 
-// Chamando o evento para carregar vozes
-loadVoices();
-
-        // Reconhecimento de voz
+// Ajuste na função de reconhecimento de voz
 function setupSpeechRecognition() {
     if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
         alert("Speech recognition is not supported in this browser.");
