--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -162,18 +162,14 @@ function loadVoices() {
 setTimeout(() => {
     if (!voicesLoaded) {
         console.warn("Vozes não carregaram dentro do tempo esperado.");
-        alert("Vozes não carregaram dentro do tempo esperado. Por favor, recarregue a página.");
-        speakButton.disabled = true; // Mantém o botão desabilitado
-        speakButton.innerText = "Error: Voices not loaded";
+        alert("Vozes não carregaram dentro do tempo esperado. O carregamento pode estar atrasado.");
+        speakButton.innerText = "Retrying Voices...";
     }
 }, 5000);
 
-// Desabilita o botão inicialmente
+// Desabilita o botão inicialmente e chama o carregamento de vozes
 speakButton.disabled = true;
 speakButton.innerText = "Loading Voices...";
-loadVoices(); // As vozes serão carregadas e o botão será habilitado na função
-
-// Chama o carregamento das vozes
 loadVoices();
 
 function getAvailableVoice(lang) {
@@ -310,10 +306,11 @@ function setupSpeechRecognition() {
         return;
     }
 
-    if (isSpeaking || isListening) {
-        console.log("Robot is already busy speaking or listening.");
-        return; // Evita múltiplas ações simultâneas
-    }
+   if (isSpeaking || isListening) {
+    alert("The robot is currently busy. Please wait for it to finish.");
+    console.log("Robot is already busy speaking or listening.");
+    return; // Evita múltiplas ações simultâneas
+}
 
     if (speakButton.innerText === "Press to Speak") {
         recognition.start(); // Inicia o reconhecimento de voz
@@ -341,16 +338,7 @@ async function initializeConversation() {
                 messageElement.innerText = data.response;
 
                 messageElement.style.visibility = "hidden"; // Mensagem inicial será exibida após o clique
-
-                // Verifica se as vozes estão carregadas e atualiza o estado do botão
-                if (!voicesLoaded) {
-                    speakButton.disabled = true;
-                    speakButton.innerText = "Loading Voices...";
-                } else {
-                    speakButton.disabled = false;
-                    speakButton.innerText = "Press to Start";
-                }
-
+             
                 if (!speakButton.hasAttribute('data-initialized')) {
                     speakButton.setAttribute('data-initialized', 'true');
 
