--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -135,42 +135,88 @@ let voicesLoaded = false; // Variável para controlar se as vozes foram carregad
 
 function loadVoices() {
     const synth = window.speechSynthesis;
+    let voicesLoaded = false;
 
+    // Exibe mensagem inicial enquanto as vozes carregam
+    speakButton.disabled = true;
+    speakButton.innerText = "Loading Voices...";
+
+    // Evento disparado quando as vozes forem carregadas
     synth.onvoiceschanged = () => {
         const voices = synth.getVoices();
         if (voices.length > 0) {
             voicesLoaded = true;
-            console.log("Vozes carregadas com sucesso:", voices);
+            console.log("✅ Vozes carregadas com sucesso:", voices);
             speakButton.disabled = false; // Habilita o botão
             speakButton.innerText = "Press to Start";
         }
     };
 
-    // Fallback caso onvoiceschanged não funcione (intervalo contínuo)
-    const interval = setInterval(() => {
-        if (voicesLoaded) {
-            clearInterval(interval); // Para o fallback
-        } else if (synth.getVoices().length > 0) {
+    // Fallback com intervalo contínuo para garantir carregamento de vozes
+    const fallbackInterval = setInterval(() => {
+        const voices = synth.getVoices();
+        if (voices.length > 0) {
             voicesLoaded = true;
-            console.log("Fallback carregou vozes.");
+            clearInterval(fallbackInterval); // Para o fallback assim que as vozes forem carregadas
+            console.log("✅ Fallback: Vozes carregadas com sucesso.");
             speakButton.disabled = false;
             speakButton.innerText = "Press to Start";
         }
-    }, 200);
+    }, 500); // Verifica a cada 500ms
 
-    // Timeout para forçar alerta caso as vozes não carreguem
-setTimeout(() => {
-    if (!voicesLoaded) {
-        console.warn("Vozes não carregaram dentro do tempo esperado.");
-        alert("Vozes não carregaram dentro do tempo esperado. O carregamento pode estar atrasado.");
-        speakButton.innerText = "Retrying Voices...";
-    }
-}, 5000);
+    // Timeout final para evitar loops infinitos
+    setTimeout(() => {
+        if (!voicesLoaded) {
+            clearInterval(fallbackInterval); // Para o fallback
+            console.error("⚠️ As vozes não carregaram dentro do tempo esperado.");
+            alert("Vozes não carregaram. Verifique se o dispositivo suporta síntese de voz.");
+            speakButton.disabled = true;
+            speakButton.innerText = "Retrying Voices...";
+        }
+    }, 10000); // Timeout de 10 segundos
+}
+function loadVoices() {
+    const synth = window.speechSynthesis;
+    let voicesLoaded = false;
 
-// Desabilita o botão inicialmente e chama o carregamento de vozes
-speakButton.disabled = true;
-speakButton.innerText = "Loading Voices...";
-loadVoices();
+    // Exibe mensagem inicial enquanto as vozes carregam
+    speakButton.disabled = true;
+    speakButton.innerText = "Loading Voices...";
+
+    // Evento disparado quando as vozes forem carregadas
+    synth.onvoiceschanged = () => {
+        const voices = synth.getVoices();
+        if (voices.length > 0) {
+            voicesLoaded = true;
+            console.log("✅ Vozes carregadas com sucesso:", voices);
+            speakButton.disabled = false; // Habilita o botão
+            speakButton.innerText = "Press to Start";
+        }
+    };
+
+    // Fallback com intervalo contínuo para garantir carregamento de vozes
+    const fallbackInterval = setInterval(() => {
+        const voices = synth.getVoices();
+        if (voices.length > 0) {
+            voicesLoaded = true;
+            clearInterval(fallbackInterval); // Para o fallback assim que as vozes forem carregadas
+            console.log("✅ Fallback: Vozes carregadas com sucesso.");
+            speakButton.disabled = false;
+            speakButton.innerText = "Press to Start";
+        }
+    }, 500); // Verifica a cada 500ms
+
+    // Timeout final para evitar loops infinitos
+    setTimeout(() => {
+        if (!voicesLoaded) {
+            clearInterval(fallbackInterval); // Para o fallback
+            console.error("⚠️ As vozes não carregaram dentro do tempo esperado.");
+            alert("Vozes não carregaram. Verifique se o dispositivo suporta síntese de voz.");
+            speakButton.disabled = true;
+            speakButton.innerText = "Retrying Voices...";
+        }
+    }, 10000); // Timeout de 10 segundos
+}
 
 function getAvailableVoice(lang) {
     const voices = window.speechSynthesis.getVoices();
